--- a/src/components/features.scss
+++ b/src/components/features.scss
@@ -2,65 +2,6 @@ $bg: #d2d2d2;
 $bg-warn: #e9c704;
 
 .features {
-	&-itemValues {
-		display: flex;
-		flex-direction: row;
-		justify-content: space-between;
-		text-transform: capitalize;
-		width: 100%;
-
-		.status {
-			align-items: center;
-			border-radius: 50%;
-			display: flex;
-			height: 10px;
-			justify-content: center;
-			margin-left: -20%;
-			width: 10px;
-
-			&.danger {
-				border: solid 2px red;
-				&::before {
-					background-color: red;
-					border-radius: 50%;
-					content: '';
-					height: 4px;
-					width: 4px;
-				}
-			}
-
-			&.success {
-				border: solid 2px rgb(89, 144, 89);
-				transform: (rotate(-45deg));
-				&::before {
-					background-color: #090;
-					content: '';
-					height: 3px;
-					margin-left: 0px;
-					margin-top: 0px;
-					width: 1px;
-				}
-
-				&::after {
-					background-color: #090;
-					content: '';
-					height: 1px;
-					margin-top: 2px;
-					width: 4px;
-				}
-			}
-
-			&.warning {
-				border: solid 2px #e9c704;
-				&::after {
-					color: #e9c704;
-					content: '!';
-					font-size: 8px;
-					width: 4px;
-				}
-			}
-		}
-	}
 	&-featureTitle {
 		background-color: $bg-warn;
 		color: white;
@@ -75,29 +16,26 @@ $bg-warn: #e9c704;
 		width: 100%;
 	}
 
-	&-featureItem {
-		background-color: $bg;
-		border: solid;
-		height: 500px;
-		overflow: hidden;
-
-		&:first-of-type {
+	&-selectedItem {
+		.features-featureItem {
 			flex-basis: 730px;
 			min-width: 730px;
 		}
+	}
+
+	&-selectedFeature {
+		display: flex;
+		width: 730px;
+	}
+	&-featureItem {
+		background-color: $bg;
+		border: solid;
+		flex-basis: 50%;
+		overflow: hidden;
 
 		&:last-of-type {
-			flex-basis: 450px;
-			min-width: 450px;
-		}
-
-		:nth-child(2) {
-		}
-		:nth-child(3) {
-		}
-		:nth-child(4) {
-		}
-		:nth-child(5) {
+			flex-grow: 1;
+			align-self: strech;
 		}
 	}
 	&-flexHelper {
@@ -114,9 +52,18 @@ $bg-warn: #e9c704;
 }
 
 .itemValuesContainer {
-	display: flex;
+	margin-top: 20px;
+	background: yellow;
 	border: solid 1 px red;
+	display: flex;
 	flex-basis: 48%;
 	flex-direction: column;
 	flex-wrap: wrap;
+}
+
+.data-icon {
+	align-items: center;
+	display: flex;
+	justify-content: space-between;
+	width: 50px;
 }
