--- a/src/components/meassurement.scss
+++ b/src/components/meassurement.scss
@@ -1,12 +1,18 @@
+@import './../colors.scss';
+
 .meassurement {
 	&-container {
+		font-size: 12px;
 		display: flex;
 		flex-direction: column;
 		flex-wrap: wrap;
 		max-height: 500px;
 		padding: 5px;
+		margin: 3px;
 	}
-
+	&-name {
+		width: 70px;
+	}
 	&-listContainer {
 		display: flex;
 		flex-direction: row;
@@ -29,9 +35,9 @@
 			width: 15px;
 
 			&.danger {
-				border: solid 2px red;
+				border: solid 2px $bg-danger;
 				&::before {
-					background-color: red;
+					background-color: $bg-danger;
 					border-radius: 50%;
 					content: '';
 					height: 4px;
@@ -43,7 +49,7 @@
 				border: solid 2px rgb(89, 144, 89);
 				transform: (rotate(-45deg));
 				&::before {
-					background-color: #090;
+					background-color: $bg-success;
 					content: '';
 					height: 3px;
 					margin-left: 0px;
@@ -52,7 +58,7 @@
 				}
 
 				&::after {
-					background-color: #090;
+					background-color: $bg-success;
 					content: '';
 					height: 1px;
 					margin-top: 2px;
@@ -61,9 +67,9 @@
 			}
 
 			&.warning {
-				border: solid 2px #e9c704;
+				border: solid 2px $bg-warn;
 				&::after {
-					color: #e9c704;
+					color: $bg-warn;
 					content: '!';
 					font-size: 8px;
 					width: 4px;
